--- a/portifolio/style.css
+++ b/portifolio/style.css
@@ -13,7 +13,7 @@ html{
     font-size: 62.5%; 
 }
 
-
+/* Typography*/
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
 /*font-family: 'Abril Fatface', cursive;*/
 @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@400;700;900&display=swap');
@@ -27,6 +27,24 @@ body{
     font-size: 1.8rem;
 
     padding: 3rem;
+}
+
+.h1{
+    font-family: 'Abril Fatface';
+    font-size: 8vh;
+    /* width: 642px; */
+    line-height: 1.3;
+    font-weight: 800;
+}
+
+.h2{
+    font-weight: 700;
+    font-size: 2.6rem;
+    margin-bottom: 2rem;
+}
+
+.p{
+    line-height: 1.8;
 }
 
 /* Grid */
@@ -58,30 +76,60 @@ body{
     /* display: none; */
 }
 
-/* Component */
-
-
-.header-section{
-    background-color: var(--primary-color);
-    min-height: 50vh;
-    overflow: hidden;
-}
-
-
-.header-content{
-    margin-top: 8vh;
-    display: flex;
-}
-
+/* Utilities*/
 .hlight{
     padding-right: .8rem;
     background: linear-gradient(
         to bottom,
         transparent 45%,
         #FFE872 65%
-    );
+        );
+        animation: moveRightToCenter 2s;
+        transition-delay: 5s;
+    }
+
+.align-top{
+    display: flex;
+    align-items: start;
 }
 
+.justify-center{
+    justify-content: center;
+}
+
+.mb-bg{
+    margin-bottom: 8rem;
+}
+.mb-md{
+    margin-bottom: 4rem;
+}
+.mb-sm{}
+
+/* Header Section */
+.header-section{
+    background-color: var(--primary-color);
+    min-height: 50vh;
+    overflow: hidden;
+}
+
+.header-content{
+    margin-top: 8vh;
+    display: flex;
+}
+
+.header-img{
+    margin-top: 6vh;
+    overflow: hidden;
+    transform: translateX(80px);
+    justify-content: center;
+    /* margin-right: 500px; */
+}
+
+.text-section{
+    animation: moveBottomToCenter 4s;
+}
+
+/*  Navbar */
 .navbar{
     display: flex;
     align-items: center;
@@ -111,86 +159,7 @@ body{
     margin-left: 5rem;
 }
 
-.h1{
-    font-family: 'Abril Fatface';
-    font-size: 5vh;
-    /* width: 642px; */
-    line-height: 1.3;
-    font-weight: 800;
-}
-
-p{
-    line-height: 1.8;
-}
-
-.mb-bg{
-    margin-bottom: 8rem;
-}
-.mb-md{
-    margin-bottom: 4rem;
-}
-.mb-sm{}
-
-.btn-section{
-    position: relative;
-}
-
-.btn{
-    background-color: black;
-    border: none;
-    cursor: pointer;
-    padding: 2.4rem 4.8rem;
-    color: white;
-    font-family: 'Nunito Sans', sans-serif;
-    font-weight: 700;
-}
-
-
-
-.btn-border{
-    position: absolute;
-    margin: 2px;
-    border: .4rem solid black;
-    padding: 1.9rem 3.5rem;
-    width: 175px;
-    height: 50px;
-    left: 8px;
-    top: 20px;
-    z-index: -1;
-    color: transparent;
-    background-color: transparent;
-}
-
-/* .header-img-box{
-    display: flex;
-} */
-
-.header-img{
-    margin-top: 6vh;
-    overflow: hidden;
-    transform: translateX(80px);
-    justify-content: center;
-    /* margin-right: 500px; */
-}
-
-.hl-box{
-    display: inline-block;
-    position: relative;
-}
-
-.hl{
-    position: absolute;
-    top: 50%;
-    left:4%;
-    bottom: auto;
-    height: 3.6px;
-    background-color: var(--hl-color);
-}
-
-.hl-text{
-    display: inline-block;
-}
-
+/* My Works Section */
 .my-works-section{
     margin-top: 6rem;
 }
@@ -199,23 +168,47 @@ p{
     margin-bottom: 7rem;
 }
 
+.project-box:hover{
+    transform: scaleY(1.05);
+    box-shadow: ;
+}
+
+.project-box a{
+    cursor: pointer;
+}
+
+/* Btn Component */
+.btn-section{
+    position: relative;
+}
+
+.btn{
+    background-color: black;
+    border: black solid 3px;
+    border: none;
+    cursor: pointer;
+    padding: 2.4rem 4.8rem;
+    color: white;
+    font-family: 'Nunito Sans', sans-serif;
+    font-weight: 700;
+    font-size: 1.4rem;
+}
+
+.btn:hover{
+    background-color: transparent;
+    border: black solid 3px;
+    color: black;
+    transition:  all .3s;
+}
+
+/* My Skills Section */
 .my-skills-section{
     margin-top: 6rem;
     background-color: var(--primary-color);
     padding: 6rem;
 }
 
-.align-top{
-    display: flex;
-    align-items: start;
-}
-
-.h2{
-    font-weight: 700;
-    font-size: 2.6rem;
-    margin-bottom: 2rem;
-}
-
+/* Footer Section */
 .footer{
     padding: 6rem;
 }
@@ -228,6 +221,11 @@ p{
     align-items: center;
     text-align: center;
     margin: 0px auto;
+}
+
+.circle:hover{
+    transform: translateY(-.5rem);
+    transition: all 1s;
 }
 
 .circle{
@@ -251,6 +249,34 @@ p{
     font-size: 2.5rem;
 }
 
-.justify-center{
-    justify-content: center;
-}
+
+/* Animation */
+
+@keyframes moveBottomToCenter {
+    0%{
+        opacity: 0;
+        transform: translateY(200px);
+    }
+    
+    100%{
+        opacity: 1;
+        transform: translateY(0px);
+    }
+  }
+
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
