--- a/portifolio/style.css
+++ b/portifolio/style.css
@@ -11,6 +11,7 @@
 
 html{
     font-size: 62.5%; 
+    scroll-behavior: smooth;
 }
 
 /* Typography*/
@@ -31,7 +32,7 @@ body{
 
 .h1{
     font-family: 'Abril Fatface';
-    font-size: 8vh;
+    font-size: 6rem;
     /* width: 642px; */
     line-height: 1.3;
     font-weight: 800;
@@ -47,6 +48,9 @@ body{
     line-height: 1.8;
 }
 
+a{
+    text-decoration: none;
+}
 /* Grid */
 .container{
     /* max-width: 1440px ; */
@@ -56,7 +60,6 @@ body{
 
 .row{
     display: flex;
-    flex: row;
     justify-content: space-between;
 }
 
@@ -84,9 +87,13 @@ body{
         transparent 45%,
         #FFE872 65%
         );
-        animation: moveRightToCenter 2s;
-        transition-delay: 5s;
-    }
+}
+
+
+@keyframes AnimationName {
+    0%{background-position:0% 50%}
+    100%{background-position:50% 100%}
+}
 
 .align-top{
     display: flex;
@@ -95,6 +102,11 @@ body{
 
 .justify-center{
     justify-content: center;
+}
+
+.section-padding{
+    padding: 0 5rem;
+    padding-bottom: 5rem;
 }
 
 .mb-bg{
@@ -120,32 +132,26 @@ body{
 .header-img{
     margin-top: 6vh;
     overflow: hidden;
-    transform: translateX(80px);
+    transform: translate(90px, 80px);
     justify-content: center;
-    /* margin-right: 500px; */
 }
 
 .text-section{
-    animation: moveBottomToCenter 4s;
+    animation: moveBottomToCenter 1s;
 }
 
 /*  Navbar */
-.navbar{
+/* .navbar{
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding-top: 2rem;
-}
+} */
 
 .logo{
     font-family: 'Mulish', sans-serif;
     font-weight: 900;
     font-size: 2rem;
-}
-
-.nav-items{
-    list-style: none;
-    display: flex;
 }
 
 .nav-link{
@@ -154,10 +160,141 @@ body{
     font-weight: 700;
     font-size: inherit;
 }
+.nav-link:hover{
+    transform: scale(1.03);
+    transition: transform .5s;
+}
+/* .nav-items{
+    list-style: none;
+    display: flex;
+}
+
+
 
 .nav-link:last-child{
     margin-left: 5rem;
-}
+} */
+
+* {
+    box-sizing: border-box;
+  }
+  
+  body {
+    margin: 0px;
+    font-family: 'segoe ui';
+  }
+  
+  .nav {
+    height: 50px;
+    width: 100%;
+    background-color: transparent;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  
+  .nav > .nav-header {
+    display: inline;
+  }
+  
+  .nav > .nav-header > .nav-title {
+    display: inline-block;
+    font-size: 22px;
+    color: rgb(0, 0, 0);
+    padding: 10px 10px 10px 10px;
+  }
+  
+  .nav > .nav-btn {
+    display: none;
+  }
+  
+  .nav > .nav-links {
+    display: inline;
+    float: right;
+    font-size: 18px;
+  }
+  
+  .nav > .nav-links > a {
+    display: inline-block;
+    /* padding: 13px 10px 13px 10px; */
+    text-decoration: none;
+    color: #000000;
+  }
+  
+/*   .nav > .nav-links > a:hover {
+    background-color: #F9EFE7;
+  } */
+  
+  .nav > #nav-check {
+    display: none;
+  }
+  
+  @media (max-width:650px) {
+    .nav > .nav-btn {
+      display: inline-block;
+      position: absolute;
+      right: 0px;
+      top: 0px;
+    }
+    .nav > .nav-btn > label {
+      display: inline-block;
+      width: 25px;
+      height: 25px;
+      padding: 13px;
+    }
+    .nav > .nav-btn > label:hover,.nav  #nav-check:checked ~ .nav-btn > label {
+      background-color: transparent;
+    }
+    .nav > .nav-btn > label > span {
+      display: block;
+      width: 25px;
+      height: 10px;
+      border-top: 2px solid rgb(0, 0, 0);
+    }
+    .nav > .nav-links {
+      position: absolute;
+      display: inline-block;
+      width: 100%;
+      background-color: #b7b4b9;
+      transition: all 0.3s ease-in;
+      overflow-y: hidden;
+      top: 50px;
+      left: 0px;
+      border-radius: 0rem 0rem 1.6rem 1.6rem;
+    }
+    .nav > .nav-links > a {
+        display: flex;
+        align-items: center;
+        text-align: center;
+        margin: 5px auto;
+        color: rgb(0, 0, 0);
+      display: block;
+      width: 100px;
+    }
+    .nav > .nav-links > a:not(:last-child) {
+        margin-top: 20px ;
+    }
+    .nav > #nav-check:not(:checked) ~ .nav-links {
+      height: 0px;
+    }
+    .nav > #nav-check:checked ~ .nav-links {
+      height: calc(20vh - 50px);
+      overflow-y: auto;
+    }
+  }
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* My Works Section */
 .my-works-section{
@@ -165,13 +302,24 @@ body{
 }
 
 .project-box{
+    width: 45%;
+/*     margin-bottom: 7rem; */
+}
+
+.project-box:not(:last-child){
     margin-bottom: 7rem;
 }
 
 .project-box:hover{
-    transform: scaleY(1.05);
-    box-shadow: ;
+    box-shadow: 0 2rem 2rem rgba(0, 0, 0, 0.2);
+    transition: all .5s;
 }
+
+.project-img{
+    width: 100%;
+    height: auto;
+}
+
 
 .project-box a{
     cursor: pointer;
@@ -184,8 +332,8 @@ body{
 
 .btn{
     background-color: black;
-    border: black solid 3px;
     border: none;
+    border: rgb(0, 0, 0) solid 3px;
     cursor: pointer;
     padding: 2.4rem 4.8rem;
     color: white;
@@ -203,7 +351,6 @@ body{
 
 /* My Skills Section */
 .my-skills-section{
-    margin-top: 6rem;
     background-color: var(--primary-color);
     padding: 6rem;
 }
@@ -224,8 +371,9 @@ body{
 }
 
 .circle:hover{
-    transform: translateY(-.5rem);
+    transform: translateY(-1rem);
     transition: all 1s;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
 }
 
 .circle{
@@ -239,10 +387,10 @@ body{
     margin-top: 1rem;
 }
 
-.circle:nth-child(2) {
+.social-icon:nth-child(2){
     margin-right:4rem;
     margin-left:4rem;
-  }
+}
 
 .icon{
     color: white;
@@ -263,6 +411,82 @@ body{
         transform: translateY(0px);
     }
   }
+  
+
+
+
+@media(max-width:900px){
+    .h1{
+        font-size: 5rem;
+    }
+    
+    .h2{
+        font-weight: 700;
+        font-size: 2.6rem;
+        margin-bottom: 2rem;
+    } 
+
+    .project-box{
+        width: 100%;
+        margin-bottom: 7rem;
+    }
+
+    .header-content{
+        margin-top: 5vh;
+    }
+
+    .header-img{
+
+        transform: translate(10px, 80px);
+    }
+}
+
+@media(max-width:720px){
+    /* Grid */
+    
+    .footer-row.row{
+        flex-direction: row;
+    }
+    
+    .row{
+        flex-direction: column;
+    }
+    
+    .col-1-of-2{
+        width: 100%;
+    }
+
+    .col-2-of-3{
+        width: 90%;   
+    }
+
+    .col-1-of-3{
+        display: none;
+    }
+
+    .social-icon:nth-child(2){
+        margin-right:2rem;
+        margin-left:2rem;
+    }
+}
+
+/* Burger Menu*/
+@media(max-width:600px){
+    html{
+        font-size: 50%; 
+    }
+
+    .header-content{
+        margin-top: 3vh;
+    }
+
+    .section-padding{
+        padding: 0 5rem;
+        padding-bottom: 5rem;
+    }
+}
+
+
 
   
 
